--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,10 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+remappings = [
+    '@chainlink/contracts/src/v0.8/=lib/chainlink-brownie-contracts/contracts/src/v0.8',
+    '@solmate=lib/solmate/src',
+]
 
+# lib/chainlink-brownie-contracts/contracts/src/v0.8/interfaces/VRFCoordinatorV2Interface.sol
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
